Fixes CI